# openstack-lp-bug-manager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  VMT-FEATURES.md  demo-runbook.md  demo.tape  pyproject.toml
.claude/commands/: lp-bug.md
.github/workflows/: tests.yml
lp_bug_manager/: analytics.py  audit.py  bugs.py  cli.py  client.py  mcp_server.py  releases.py  serializers.py  vmt.py
tests/: conftest.py  test_analytics.py  test_audit.py  test_bugs.py  test_cli.py  test_mcp_server.py  test_releases.py  test_vmt.py
